test-suite/invalid/syntax/lone-low-surrogate.jyml
# Invalid lone low surrogate
"invalid": "\uDC00"